package ar.edu.utn.frba.dds.models.entities;

public interface Notificador {
    void enviarAlerta(Alerta alerta);
}
